--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -2,37 +2,37 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @activity.Company_Name %>
+  <%= @activity.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @activity.Date %>
+  <%= @activity.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @activity.Season %>
+  <%= @activity.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @activity.Farm_Name %>
+  <%= @activity.farm_name %>
 </p>
 
 <p>
   <strong>Section:</strong>
-  <%= @activity.Section %>
+  <%= @activity.section %>
 </p>
 
 <p>
   <strong>Activity:</strong>
-  <%= @activity.Activity %>
+  <%= @activity.activity %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @activity.Pro_Number %>
+  <%= @activity.pro_number %>
 </p>
 
 <p>
