--- a/app/views/advertisements/_form.html.erb
+++ b/app/views/advertisements/_form.html.erb
@@ -12,57 +12,57 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Company_Name, class:"input" %>
+      <%= form.text_field :company_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Item_Type, class:"label" %>
+    <%= form.label :item_type, class:"label" %>
     <div class="control">
-      <%= form.text_field :Item_Type , class:"input"%>
+      <%= form.text_field :item_type , class:"input"%>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :item_Name, class:"label" %>
+    <%= form.label :item_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :item_Name, class:"input" %>
+      <%= form.text_field :item_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Unit, class:"label" %>
+    <%= form.label :unit, class:"label" %>
     <div class="control"></div>
-    <%= form.text_field :Unit, class:"input" %>
+    <%= form.text_field :unit, class:"input" %>
   </div>
 
   <div class="field">
-    <%= form.label :Unit_Price, class:"label" %>
+    <%= form.label :unit_price, class:"label" %>
     <div class="control">
-      <%= form.text_field :Unit_Price, class:"input" %>
+      <%= form.text_field :unit_price, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :VAT, class:"label" %>
+    <%= form.label :vat, class:"label" %>
     <div class="control">
-      <%= form.text_field :VAT, class:"input" %>
+      <%= form.text_field :vat, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Total_Amount, class:"label" %>
+    <%= form.label :total_amount, class:"label" %>
     <div class="control">
-      <%= form.text_field :Total_Amount, class:"input" %>
+      <%= form.text_field :total_amount, class:"input" %>
     </div>
   </div>
 
