--- a/app/views/advertisements/show.html.erb
+++ b/app/views/advertisements/show.html.erb
@@ -2,42 +2,42 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @advertisement.Company_Name %>
+  <%= @advertisement.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @advertisement.Date %>
+  <%= @advertisement.date %>
 </p>
 
 <p>
   <strong>Item type:</strong>
-  <%= @advertisement.Item_Type %>
+  <%= @advertisement.item_type %>
 </p>
 
 <p>
   <strong>Item name:</strong>
-  <%= @advertisement.item_Name %>
+  <%= @advertisement.item_name %>
 </p>
 
 <p>
   <strong>Unit:</strong>
-  <%= @advertisement.Unit %>
+  <%= @advertisement.unit %>
 </p>
 
 <p>
   <strong>Unit price:</strong>
-  <%= @advertisement.Unit_Price %>
+  <%= @advertisement.unit_price %>
 </p>
 
 <p>
   <strong>Vat:</strong>
-  <%= @advertisement.VAT %>
+  <%= @advertisement.vat %>
 </p>
 
 <p>
   <strong>Total amount:</strong>
-  <%= @advertisement.Total_Amount %>
+  <%= @advertisement.total_amount %>
 </p>
 
 <p>
