--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -12,44 +12,44 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
+    <%= form.label :season, class:"label" %>
     <div class="control">
-      <%= form.text_field :Season, class:"input" %>
+      <%= form.text_field :season, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Asset, class:"label" %>
+    <%= form.label :asset, class:"label" %>
     <div class="control">
-      <%= form.text_field :Asset, class:"input" %>
+      <%= form.text_field :asset, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Asset_Number, class:"label" %>
+    <%= form.label :asset_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Asset_Number, class:"input" %>
+      <%= form.text_field :asset_number, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Asset_Type, class:"label" %>
+    <%= form.label :asset_type, class:"label" %>
     <div class="control">
-      <%= form.text_field :Asset_Type, class:"input" %>
+      <%= form.text_field :asset_type, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Unit_Price, class:"label" %>
+    <%= form.label :unit_price, class:"label" %>
     <div class="control">
-      <%= form.text_field :Unit_Price, class:"input" %>
+      <%= form.text_field :unit_price, class:"input" %>
     </div>
   </div>
 
@@ -61,16 +61,16 @@
   </div>
 
   <div class="field">
-    <%= form.label :Total_Amount, class:"label" %>
+    <%= form.label :total_amount, class:"label" %>
     <div class="control">
-      <%= form.text_field :Total_Amount, class:"input" %>
+      <%= form.text_field :total_amount, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :pro_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
