--- a/app/views/assets/show.html.erb
+++ b/app/views/assets/show.html.erb
@@ -2,17 +2,17 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @asset.Company_Name %>
+  <%= @asset.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @asset.Date %>
+  <%= @asset.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @asset.Season %>
+  <%= @asset.season %>
 </p>
 
 <p>
@@ -22,27 +22,27 @@
 
 <p>
   <strong>Asset number:</strong>
-  <%= @asset.Asset_Number %>
+  <%= @asset.asset_number %>
 </p>
 
 <p>
   <strong>Asset type:</strong>
-  <%= @asset.Asset_Type %>
+  <%= @asset.asset_type %>
 </p>
 
 <p>
   <strong>Unit price:</strong>
-  <%= @asset.Unit_Price %>
+  <%= @asset.unit_price %>
 </p>
 
 <p>
   <strong>Total amount:</strong>
-  <%= @asset.Total_Amount %>
+  <%= @asset.total_amount %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @asset.Pro_Number %>
+  <%= @asset.pro_number %>
 </p>
 
 <p>
