--- a/app/views/barn_and_slate_records/_form.html.erb
+++ b/app/views/barn_and_slate_records/_form.html.erb
@@ -12,64 +12,71 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
-      <%= form.text_field :Season, class:"input" %>
+    <%= form.label :season, class:"label" %>
+      <%= form.text_field :season, class:"input" %>
     <div class="control"></div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name, class:"label" %>
+    <%= form.label :farm_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Farm_Name, class:"input" %>
+      <%= form.text_field :farm_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :P_Barn_Number, class:"label" %>
+    <%= form.label :p_barn_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :P_Barn_Number, class:"input" %>
+      <%= form.text_field :p_barn_number, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Reap, class:"label" %>
+    <%= form.label :reap, class:"label" %>
     <div class="control">
-      <%= form.text_field :Reap, class:"input" %>
+      <%= form.text_field :reap, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :P_Slate_NumberSlate_Weight, class:"label" %>
+    <%= form.label :p_slate_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :P_Slate_NumberSlate_Weight, class:"input" %>
+      <%= form.text_field :p_slatenumber, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Barn_Weight, class:"label" %>
+    <%= form.label :slate_weight, class:"label" %>
     <div class="control">
-      <%= form.text_field :Barn_Weight, class:"input" %>
+      <%= form.text_field :slate_weight, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Cumulative_Barn_Weight, class:"label" %>
+    <%= form.label :barn_weight, class:"label" %>
     <div class="control">
-      <%= form.text_field :Cumulative_Barn_Weight, class:"input" %>
+      <%= form.text_field :barn_weight, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :cumulative_barn_weight, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :cumulative_barn_Weight, class:"input" %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= form.label :pro_number, class:"label" %>
+    <div class="control">
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
