--- a/app/views/barn_and_slate_records/show.html.erb
+++ b/app/views/barn_and_slate_records/show.html.erb
@@ -2,52 +2,57 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @barn_and_slate_record.Company_Name %>
+  <%= @barn_and_slate_record.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @barn_and_slate_record.Date %>
+  <%= @barn_and_slate_record.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @barn_and_slate_record.Season %>
+  <%= @barn_and_slate_record.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @barn_and_slate_record.Farm_Name %>
+  <%= @barn_and_slate_record.farm_name %>
 </p>
 
 <p>
   <strong>P barn number:</strong>
-  <%= @barn_and_slate_record.P_Barn_Number %>
+  <%= @barn_and_slate_record.p_barn_number %>
 </p>
 
 <p>
   <strong>Reap:</strong>
-  <%= @barn_and_slate_record.Reap %>
+  <%= @barn_and_slate_record.reap %>
 </p>
 
 <p>
-  <strong>P slate numberslate weight:</strong>
-  <%= @barn_and_slate_record.P_Slate_NumberSlate_Weight %>
+  <strong>P slate number:</strong>
+  <%= @barn_and_slate_record.p_slate_number %>
+</p>
+
+<p>
+  <strong>Slate weight:</strong>
+  <%= @barn_and_slate_record.slate_weight %>
 </p>
 
 <p>
   <strong>Barn weight:</strong>
-  <%= @barn_and_slate_record.Barn_Weight %>
+  <%= @barn_and_slate_record.barn_weight %>
 </p>
 
 <p>
   <strong>Cumulative barn weight:</strong>
-  <%= @barn_and_slate_record.Cumulative_Barn_Weight %>
+  <%= @barn_and_slate_record.cumulative_barn_weight %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @barn_and_slate_record.Pro_Number %>
+  <%= @barn_and_slate_record.pro_number %>
 </p>
 
 <p>
