--- a/app/views/calenders/show.html.erb
+++ b/app/views/calenders/show.html.erb
@@ -2,37 +2,37 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @calender.Company_Name %>
+  <%= @calender.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @calender.Date %>
+  <%= @calender.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @calender.Season %>
+  <%= @calender.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @calender.Farm_Name %>
+  <%= @calender.farm_name %>
 </p>
 
 <p>
   <strong>Month:</strong>
-  <%= @calender.Month %>
+  <%= @calender.month %>
 </p>
 
 <p>
   <strong>Activity:</strong>
-  <%= @calender.Activity %>
+  <%= @calender.activity %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @calender.Pro_Number %>
+  <%= @calender.pro_number %>
 </p>
 
 <p>
