--- a/app/views/cash_requisitions/_form.html.erb
+++ b/app/views/cash_requisitions/_form.html.erb
@@ -12,72 +12,72 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
+    <%= form.label :season, class:"label" %>
     <div class="control">
-      <%= form.text_field :Season, class:"input" %>
+      <%= form.text_field :season, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name, class:"label" %>
+    <%= form.label :farm_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Farm_Name, class:"input" %>
+      <%= form.text_field :farm_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Employee_Name, class:"label" %>
+    <%= form.label :employee_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Employee_Name, class:"input" %>
+      <%= form.text_field :employee_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Amount_Requested, class:"label" %>
+    <%= form.label :amount_requested, class:"label" %>
     <div class="control">
-      <%= form.text_field :Amount_Requested, class:"input" %>
+      <%= form.text_field :amount_requested, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Amount_Issued, class:"label" %>
+    <%= form.label :amount_issued, class:"label" %>
     <div class="control">
-      <%= form.text_field :Amount_Issued, class:"input" %>
+      <%= form.text_field :amount_issued, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pay_From, class:"label" %>
+    <%= form.label :pay_from, class:"label" %>
     <div class="control">
-      <%= form.date_select :Pay_From, class:"input" %>
+      <%= form.date_select :pay_from, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pay_To, class:"label" %>
+    <%= form.label :pay_to, class:"label" %>
     <div class="control">
-      <%= form.date_select :Pay_To, class:"input" %>
+      <%= form.date_select :pay_to, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :pro_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
