--- a/app/views/cash_requisitions/show.html.erb
+++ b/app/views/cash_requisitions/show.html.erb
@@ -2,52 +2,52 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @cash_requisition.Company_Name %>
+  <%= @cash_requisition.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @cash_requisition.Date %>
+  <%= @cash_requisition.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @cash_requisition.Season %>
+  <%= @cash_requisition.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @cash_requisition.Farm_Name %>
+  <%= @cash_requisition.farm_name %>
 </p>
 
 <p>
   <strong>Employee name:</strong>
-  <%= @cash_requisition.Employee_Name %>
+  <%= @cash_requisition.employee_name %>
 </p>
 
 <p>
   <strong>Amount requested:</strong>
-  <%= @cash_requisition.Amount_Requested %>
+  <%= @cash_requisition.amount_requested %>
 </p>
 
 <p>
   <strong>Amount issued:</strong>
-  <%= @cash_requisition.Amount_Issued %>
+  <%= @cash_requisition.amount_issued %>
 </p>
 
 <p>
   <strong>Pay from:</strong>
-  <%= @cash_requisition.Pay_From %>
+  <%= @cash_requisition.pay_from %>
 </p>
 
 <p>
   <strong>Pay to:</strong>
-  <%= @cash_requisition.Pay_To %>
+  <%= @cash_requisition.pay_to %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @cash_requisition.Pro_Number %>
+  <%= @cash_requisition.pro_number %>
 </p>
 
 <p>
