--- a/app/views/cashflows/index.html.erb
+++ b/app/views/cashflows/index.html.erb
@@ -28,19 +28,19 @@
   <tbody>
     <% @cashflows.each do |cashflow| %>
       <tr>
-        <td><%= cashflow.Company_Name %></td>
-        <td><%= cashflow.Date %></td>
-        <td><%= cashflow.Season %></td>
-        <td><%= cashflow.Month %></td>
-        <td><%= cashflow.Grower_Name %></td>
-        <td><%= cashflow.Hectrage %></td>
-        <td><%= cashflow.Operation %></td>
-        <td><%= cashflow.Unit_Price %></td>
+        <td><%= cashflow.company_name %></td>
+        <td><%= cashflow.date %></td>
+        <td><%= cashflow.season %></td>
+        <td><%= cashflow.month %></td>
+        <td><%= cashflow.grower_name %></td>
+        <td><%= cashflow.hectrage %></td>
+        <td><%= cashflow.operation %></td>
+        <td><%= cashflow.unit_price %></td>
         <td><%= cashflow.quantity_per_hectre %></td>
-        <td><%= cashflow.Unity %></td>
-        <td><%= cashflow.Input_Name %></td>
-        <td><%= cashflow.Total_Amount %></td>
-        <td><%= cashflow.Pro_Number %></td>
+        <td><%= cashflow.unity %></td>
+        <td><%= cashflow.input_name %></td>
+        <td><%= cashflow.total_amount %></td>
+        <td><%= cashflow.pro_number %></td>
         <td><%= cashflow.tian_ze_number %></td>
         <td><%= cashflow.total_quantity %></td>
         <td><%= cashflow.user_id %></td>
