--- a/app/views/cashflows/show.html.erb
+++ b/app/views/cashflows/show.html.erb
@@ -2,42 +2,42 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @cashflow.Company_Name %>
+  <%= @cashflow.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @cashflow.Date %>
+  <%= @cashflow.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @cashflow.Season %>
+  <%= @cashflow.season %>
 </p>
 
 <p>
   <strong>Month:</strong>
-  <%= @cashflow.Month %>
+  <%= @cashflow.month %>
 </p>
 
 <p>
   <strong>Grower name:</strong>
-  <%= @cashflow.Grower_Name %>
+  <%= @cashflow.grower_name %>
 </p>
 
 <p>
   <strong>Hectrage:</strong>
-  <%= @cashflow.Hectrage %>
+  <%= @cashflow.hectrage %>
 </p>
 
 <p>
   <strong>Operation:</strong>
-  <%= @cashflow.Operation %>
+  <%= @cashflow.operation %>
 </p>
 
 <p>
   <strong>Unit price:</strong>
-  <%= @cashflow.Unit_Price %>
+  <%= @cashflow.unit_price %>
 </p>
 
 <p>
@@ -47,22 +47,22 @@
 
 <p>
   <strong>Unity:</strong>
-  <%= @cashflow.Unity %>
+  <%= @cashflow.unity %>
 </p>
 
 <p>
   <strong>Input name:</strong>
-  <%= @cashflow.Input_Name %>
+  <%= @cashflow.input_name %>
 </p>
 
 <p>
   <strong>Total amount:</strong>
-  <%= @cashflow.Total_Amount %>
+  <%= @cashflow.total_amount %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @cashflow.Pro_Number %>
+  <%= @cashflow.pro_number %>
 </p>
 
 <p>
