--- a/app/views/cereal_sales/show.html.erb
+++ b/app/views/cereal_sales/show.html.erb
@@ -2,82 +2,82 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @cereal_sale.Company_Name %>
+  <%= @cereal_sale.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @cereal_sale.Date %>
+  <%= @cereal_sale.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @cereal_sale.Season %>
+  <%= @cereal_sale.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @cereal_sale.Farm_Name %>
+  <%= @cereal_sale.farm_name %>
 </p>
 
 <p>
   <strong>Grower name:</strong>
-  <%= @cereal_sale.Grower_Name %>
+  <%= @cereal_sale.grower_name %>
 </p>
 
 <p>
   <strong>Truck number:</strong>
-  <%= @cereal_sale.Truck_Number %>
+  <%= @cereal_sale.truck_number %>
 </p>
 
 <p>
   <strong>Trailer number:</strong>
-  <%= @cereal_sale.Trailer_Number %>
+  <%= @cereal_sale.trailer_number %>
 </p>
 
 <p>
   <strong>Test density:</strong>
-  <%= @cereal_sale.Test_Density %>
+  <%= @cereal_sale.test_density %>
 </p>
 
 <p>
   <strong>External matter:</strong>
-  <%= @cereal_sale.External_Matter %>
+  <%= @cereal_sale.external_matter %>
 </p>
 
 <p>
   <strong>Gross mass:</strong>
-  <%= @cereal_sale.Gross_Mass %>
+  <%= @cereal_sale.gross_mass %>
 </p>
 
 <p>
   <strong>Tare:</strong>
-  <%= @cereal_sale.Tare %>
+  <%= @cereal_sale.tare %>
 </p>
 
 <p>
   <strong>Net mass:</strong>
-  <%= @cereal_sale.Net_Mass %>
+  <%= @cereal_sale.net_mass %>
 </p>
 
 <p>
   <strong>Price per tonne:</strong>
-  <%= @cereal_sale.Price_Per_Tonne %>
+  <%= @cereal_sale.price_per_tonne %>
 </p>
 
 <p>
   <strong>Quantity:</strong>
-  <%= @cereal_sale.Quantity %>
+  <%= @cereal_sale.quantity %>
 </p>
 
 <p>
   <strong>Amount paid:</strong>
-  <%= @cereal_sale.Amount_Paid %>
+  <%= @cereal_sale.amount_paid %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @cereal_sale.Pro_Number %>
+  <%= @cereal_sale.pro_number %>
 </p>
 
 <p>
