--- a/app/views/cereal_stores/show.html.erb
+++ b/app/views/cereal_stores/show.html.erb
@@ -2,57 +2,57 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @cereal_store.Company_Name %>
+  <%= @cereal_store.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @cereal_store.Date %>
+  <%= @cereal_store.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @cereal_store.Season %>
+  <%= @cereal_store.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @cereal_store.Farm_Name %>
+  <%= @cereal_store.farm_name %>
 </p>
 
 <p>
   <strong>Type:</strong>
-  <%= @cereal_store.Type %>
+  <%= @cereal_store.type %>
 </p>
 
 <p>
-  <strong>Input name:</strong>
-  <%= @cereal_store.Input_Name %>
+  <strong>Cereal name:</strong>
+  <%= @cereal_store.cereal_name %>
 </p>
 
 <p>
   <strong>Quantity:</strong>
-  <%= @cereal_store.Quantity %>
+  <%= @cereal_store.quantity %>
 </p>
 
 <p>
   <strong>Unit:</strong>
-  <%= @cereal_store.Unit %>
+  <%= @cereal_store.unit %>
 </p>
 
 <p>
   <strong>Unit price:</strong>
-  <%= @cereal_store.Unit_Price %>
+  <%= @cereal_store.unit_price %>
 </p>
 
 <p>
   <strong>Total amount:</strong>
-  <%= @cereal_store.Total_Amount %>
+  <%= @cereal_store.total_amount %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @cereal_store.Pro_Number %>
+  <%= @cereal_store.pro_number %>
 </p>
 
 <p>
