--- a/app/views/client_payments/_form.html.erb
+++ b/app/views/client_payments/_form.html.erb
@@ -12,28 +12,28 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-    <%= form.collection_select :Company_Name, User.order(:Company_Name), :Company_Name, :Company_Name, class:"my-3" %>
+    <%= form.collection_select :company_name, User.order(:Company_Name), :Company_Name, :Company_Name, class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Category, class:"label" %>
+    <%= form.label :category, class:"label" %>
     <div class="control">
-      <%= form.text_field :Category, class:"input" %>
+      <%= form.text_field :category, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Receipt_Number, class:"label" %>
+    <%= form.label :receipt_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Receipt_Number, class:"input" %>
+      <%= form.text_field :receipt_number, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Amount_Paid, class:"label" %>
+    <%= form.label :amount_paid, class:"label" %>
     <div class="control">
       <%= form.text_field :amount_paid, class:"input" %>
     </div>
@@ -61,9 +61,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :pro_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
