--- a/app/views/client_payments/index.html.erb
+++ b/app/views/client_payments/index.html.erb
@@ -9,7 +9,7 @@
             <div class="column is-9">
               <h1 class="navbar-item">
                 Showing payments for
-                <%= client_payment.Company_Name %>
+                <%= client_payment.company_name %>
                 </h1>
             </div>
             <div class="column is-3">
@@ -32,13 +32,13 @@
         </div>
         <div class="card-content">
           <div class="content">
-            <div><strong>Category:</strong> <%= client_payment.Category %></div>
-            <div><strong>Receipt_Number:</strong> <%= client_payment.Receipt_Number %></div>
+            <div><strong>Category:</strong> <%= client_payment.category %></div>
+            <div><strong>Receipt_Number:</strong> <%= client_payment.receipt_number %></div>
             <div><strong>Amount_Paid:</strong> <%= client_payment.amount_paid %></div>
             <div><strong>Balance:</strong> <%= client_payment.balance %></div>
             <div><strong>Valid From:</strong> <%= client_payment.valid_from %></div>
             <div><strong>Valid To:</strong> <%= client_payment.valid_to %></div>
-            <div><strong>Pro_Number:</strong> <%= client_payment.Pro_Number %></div>
+            <div><strong>Pro_Number:</strong> <%= client_payment.pro_number %></div>
           </div>
         </div>
         <footer class="card-footer">
