--- a/app/views/client_payments/show.html.erb
+++ b/app/views/client_payments/show.html.erb
@@ -2,17 +2,17 @@
 
 <p>
   <strong>Company-name:</strong>
-  <%= @client_payment.Company_Name %>
+  <%= @client_payment.company_name %>
 </p>
 
 <p>
   <strong>Category:</strong>
-  <%= @client_payment.Category %>
+  <%= @client_payment.category %>
 </p>
 
 <p>
   <strong>Receipt-number:</strong>
-  <%= @client_payment.Receipt_Number %>
+  <%= @client_payment.receipt_number %>
 </p>
 
 <p>
@@ -37,7 +37,7 @@
 
 <p>
   <strong>Pro-number:</strong>
-  <%= @client_payment.Pro_Number %>
+  <%= @client_payment.pro_number %>
 </p>
 
 <%= link_to 'Edit', edit_client_payment_path(@client_payment) %> |
