--- a/app/views/curings/show.html.erb
+++ b/app/views/curings/show.html.erb
@@ -2,47 +2,47 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @curing.Company_Name %>
+  <%= @curing.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @curing.Date %>
+  <%= @curing.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @curing.Season %>
+  <%= @curing.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @curing.Farm_Name %>
+  <%= @curing.farm_name %>
 </p>
 
 <p>
   <strong>Facility:</strong>
-  <%= @curing.Facility %>
+  <%= @curing.facility %>
 </p>
 
 <p>
   <strong>Time:</strong>
-  <%= @curing.Time %>
+  <%= @curing.time %>
 </p>
 
 <p>
   <strong>Day:</strong>
-  <%= @curing.Day %>
+  <%= @curing.day %>
 </p>
 
 <p>
   <strong>Temperature:</strong>
-  <%= @curing.Temperature %>
+  <%= @curing.temperature %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @curing.Pro_Number %>
+  <%= @curing.pro_number %>
 </p>
 
 <p>
