--- a/app/views/daily_requisitions/show.html.erb
+++ b/app/views/daily_requisitions/show.html.erb
@@ -2,32 +2,32 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @daily_requisition.Company_Name %>
+  <%= @daily_requisition.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @daily_requisition.Date %>
+  <%= @daily_requisition.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @daily_requisition.Season %>
+  <%= @daily_requisition.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @daily_requisition.Farm_Name %>
+  <%= @daily_requisition.farm_name %>
 </p>
 
 <p>
   <strong>Requisition:</strong>
-  <%= @daily_requisition.Requisition %>
+  <%= @daily_requisition.requisition %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @daily_requisition.Pro_Number %>
+  <%= @daily_requisition.pro_number %>
 </p>
 
 <p>
