--- a/app/views/deduction_tables/_form.html.erb
+++ b/app/views/deduction_tables/_form.html.erb
@@ -54,9 +54,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name, class:"label" %>
+    <%= form.label :farm_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Farm_Name, class:"input" %>
+      <%= form.text_field :farm_name, class:"input" %>
     </div>
   </div>
 
