--- a/app/views/deduction_tables/index.html.erb
+++ b/app/views/deduction_tables/index.html.erb
@@ -23,11 +23,11 @@
   <tbody>
     <% @deduction_tables.each do |deduction_table| %>
       <tr>
-        <td><%= deduction_table.Season %></td>
-        <td><%= deduction_table.Month %></td>
+        <td><%= deduction_table.season %></td>
+        <td><%= deduction_table.month %></td>
         <td><%= deduction_table.employee_name %></td>
         <td><%= deduction_table.employee_number %></td>
-        <td><%= deduction_table.Farm_Name %></td>
+        <td><%= deduction_table.farm_name %></td>
         <td><%= deduction_table.allowance %></td>
         <td><%= deduction_table.payee %></td>
         <td><%= deduction_table.nssa %></td>
