--- a/app/views/deduction_tables/show.html.erb
+++ b/app/views/deduction_tables/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Season:</strong>
-  <%= @deduction_table.Season %>
+  <%= @deduction_table.season %>
 </p>
 
 <p>
   <strong>Month:</strong>
-  <%= @deduction_table.Month %>
+  <%= @deduction_table.month %>
 </p>
 
 <p>
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Farm name:</strong>
-  <%= @deduction_table.Farm_Name %>
+  <%= @deduction_table.farm_name %>
 </p>
 
 <p>
