--- a/app/views/deliveries/show.html.erb
+++ b/app/views/deliveries/show.html.erb
@@ -2,47 +2,47 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @delivery.Company_Name %>
+  <%= @delivery.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @delivery.Date %>
+  <%= @delivery.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @delivery.Season %>
+  <%= @delivery.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @delivery.Farm_Name %>
+  <%= @delivery.farm_name %>
 </p>
 
 <p>
   <strong>Section:</strong>
-  <%= @delivery.Section %>
+  <%= @delivery.section %>
 </p>
 
 <p>
   <strong>Type:</strong>
-  <%= @delivery.Type %>
+  <%= @delivery.type %>
 </p>
 
 <p>
   <strong>Delivered by:</strong>
-  <%= @delivery.Delivered_by %>
+  <%= @delivery.delivered_by %>
 </p>
 
 <p>
   <strong>Goods:</strong>
-  <%= @delivery.Goods %>
+  <%= @delivery.goods %>
 </p>
 
 <p>
   <strong>Quantity:</strong>
-  <%= @delivery.Quantity %>
+  <%= @delivery.quantity %>
 </p>
 
 <p>
@@ -52,7 +52,7 @@
 
 <p>
   <strong>Pro number:</strong>
-  <%= @delivery.Pro_Number %>
+  <%= @delivery.pro_number %>
 </p>
 
 <p>
