--- a/app/views/field_days/show.html.erb
+++ b/app/views/field_days/show.html.erb
@@ -2,17 +2,17 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @field_day.Company_Name %>
+  <%= @field_day.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @field_day.Date %>
+  <%= @field_day.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @field_day.Season %>
+  <%= @field_day.season %>
 </p>
 
 <p>
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Start time:</strong>
-  <%= @field_day.Start_Time %>
+  <%= @field_day.start_time %>
 </p>
 
 <p>
