--- a/app/views/harvestings/show.html.erb
+++ b/app/views/harvestings/show.html.erb
@@ -1,43 +1,43 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Compnay name:</strong>
-  <%= @harvesting.Compnay_Name %>
+  <strong>Company name:</strong>
+  <%= @harvesting.company_name %>
 </p>
 
 <p>
-  <strong>Date:</strong>
-  <%= @harvesting.Date %>
+  <strong>date:</strong>
+  <%= @harvesting.date %>
 </p>
 
 <p>
-  <strong>Season:</strong>
-  <%= @harvesting.Season %>
+  <strong>eason:</strong>
+  <%= @harvesting.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @harvesting.Farm_Name %>
+  <%= @harvesting.farm_name %>
 </p>
 
 <p>
   <strong>Section:</strong>
-  <%= @harvesting.Section %>
+  <%= @harvesting.section %>
 </p>
 
 <p>
   <strong>Crop:</strong>
-  <%= @harvesting.Crop %>
+  <%= @harvesting.crop %>
 </p>
 
 <p>
   <strong>Kgs done:</strong>
-  <%= @harvesting.KGS_Done %>
+  <%= @harvesting.kgs_done %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @harvesting.Pro_Number %>
+  <%= @harvesting.pro_number %>
 </p>
 
 <p>
