--- a/app/views/input_calibrations/show.html.erb
+++ b/app/views/input_calibrations/show.html.erb
@@ -2,37 +2,37 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @input_calibration.Company_Name %>
+  <%= @input_calibration.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @input_calibration.Date %>
+  <%= @input_calibration.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @input_calibration.Season %>
+  <%= @input_calibration.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @input_calibration.Farm_Name %>
+  <%= @input_calibration.farm_name %>
 </p>
 
 <p>
   <strong>Section:</strong>
-  <%= @input_calibration.Section %>
+  <%= @input_calibration.section %>
 </p>
 
 <p>
   <strong>Crop:</strong>
-  <%= @input_calibration.Crop %>
+  <%= @input_calibration.crop %>
 </p>
 
 <p>
   <strong>Variety:</strong>
-  <%= @input_calibration.Variety %>
+  <%= @input_calibration.variety %>
 </p>
 
 <p>
@@ -47,22 +47,22 @@
 
 <p>
   <strong>Bags used:</strong>
-  <%= @input_calibration.Bags_Used %>
+  <%= @input_calibration.bags_used %>
 </p>
 
 <p>
   <strong>Herbicide:</strong>
-  <%= @input_calibration.Herbicide %>
+  <%= @input_calibration.herbicide %>
 </p>
 
 <p>
   <strong>Herbicide rate:</strong>
-  <%= @input_calibration.Herbicide_Rate %>
+  <%= @input_calibration.herbicide_rate %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @input_calibration.Pro_Number %>
+  <%= @input_calibration.pro_number %>
 </p>
 
 <p>
