--- a/app/views/irriagtion_schedules/_form.html.erb
+++ b/app/views/irriagtion_schedules/_form.html.erb
@@ -12,71 +12,71 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
+    <%= form.label :season, class:"label" %>
     <div class="control">
-      <%= form.text_field :Season, class:"input" %>
+      <%= form.text_field :season, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name, class:"label" %>
+    <%= form.label :farm_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Farm_Name, class:"input" %>
+      <%= form.text_field :farm_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Section, class:"label" %>
+    <%= form.label :section, class:"label" %>
     <div class="control">
-      <%= form.text_field :Section, class:"input" %>
+      <%= form.text_field :section, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Crop, class:"label" %>
+    <%= form.label :crop, class:"label" %>
     <div class="control"></div>
-    <%= form.text_field :Crop, class:"input" %>
+    <%= form.text_field :crop, class:"input" %>
   </div>
 
   <div class="field">
-    <%= form.label :Calibration, class:"label" %>
+    <%= form.label :calibration, class:"label" %>
     <div class="control">
-      <%= form.text_field :Calibration, class:"input" %>
+      <%= form.text_field :calibration, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Mls, class:"label" %>
+    <%= form.label :mls, class:"label" %>
     <div class="control">
-      <%= form.text_field :Mls, class:"input" %>
+      <%= form.text_field :mls, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Start_Date, class:"label" %>
+    <%= form.label :start_date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Start_Date, class:"input" %>
+      <%= form.date_select :start_date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :End_Date, class:"label" %>
+    <%= form.label :end_date, class:"label" %>
     <div class="control">
-      <%= form.date_select :End_Date, class:"input" %>
+      <%= form.date_select :end_date, class:"input" %>
     </div>
   </div>
 
@@ -88,9 +88,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :pro_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
