--- a/app/views/irriagtion_schedules/show.html.erb
+++ b/app/views/irriagtion_schedules/show.html.erb
@@ -2,52 +2,52 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @irriagtion_schedule.Company_Name %>
+  <%= @irriagtion_schedule.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @irriagtion_schedule.Date %>
+  <%= @irriagtion_schedule.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @irriagtion_schedule.Season %>
+  <%= @irriagtion_schedule.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @irriagtion_schedule.Farm_Name %>
+  <%= @irriagtion_schedule.farm_name %>
 </p>
 
 <p>
   <strong>Section:</strong>
-  <%= @irriagtion_schedule.Section %>
+  <%= @irriagtion_schedule.section %>
 </p>
 
 <p>
   <strong>Crop:</strong>
-  <%= @irriagtion_schedule.Crop %>
+  <%= @irriagtion_schedule.crop %>
 </p>
 
 <p>
   <strong>Calibration:</strong>
-  <%= @irriagtion_schedule.Calibration %>
+  <%= @irriagtion_schedule.calibration %>
 </p>
 
 <p>
   <strong>Mls:</strong>
-  <%= @irriagtion_schedule.Mls %>
+  <%= @irriagtion_schedule.mls %>
 </p>
 
 <p>
   <strong>Start date:</strong>
-  <%= @irriagtion_schedule.Start_Date %>
+  <%= @irriagtion_schedule.start_date %>
 </p>
 
 <p>
   <strong>End date:</strong>
-  <%= @irriagtion_schedule.End_Date %>
+  <%= @irriagtion_schedule.end_date %>
 </p>
 
 <p>
@@ -57,7 +57,7 @@
 
 <p>
   <strong>Pro number:</strong>
-  <%= @irriagtion_schedule.Pro_Number %>
+  <%= @irriagtion_schedule.pro_number %>
 </p>
 
 <p>
