--- a/app/views/land_names/show.html.erb
+++ b/app/views/land_names/show.html.erb
@@ -2,37 +2,37 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @land_name.Company_name %>
+  <%= @land_name.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @land_name.Date %>
+  <%= @land_name.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @land_name.Season %>
+  <%= @land_name.season %>
 </p>
 
 <p>
   <strong>Farm namesection:</strong>
-  <%= @land_name.Farm_nameSection %>
+  <%= @land_name.farm_name %>
 </p>
 
 <p>
   <strong>Hectrage:</strong>
-  <%= @land_name.Hectrage %>
+  <%= @land_name.hectrage %>
 </p>
 
 <p>
   <strong>Crop:</strong>
-  <%= @land_name.Crop %>
+  <%= @land_name.crop %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @land_name.Pro_Number %>
+  <%= @land_name.pro_number %>
 </p>
 
 <%= link_to 'Edit', edit_land_name_path(@land_name) %> |
