--- a/app/views/mkt_payments/_form.html.erb
+++ b/app/views/mkt_payments/_form.html.erb
@@ -12,65 +12,65 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Company_Name, class:"input" %>
+      <%= form.text_field :company_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Service_Rendered, class:"label" %>
+    <%= form.label :service_rendered, class:"label" %>
     <div class="control">
-      <%= form.text_field :Service_Rendered, class:"input" %>
+      <%= form.text_field :service_rendered, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Service, class:"label" %>
+    <%= form.label :service, class:"label" %>
     <div class="control">
-      <%= form.text_field :Service, class:"input" %>
+      <%= form.text_field :service, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Amount_Paid, class:"label" %>
+    <%= form.label :amount_paid, class:"label" %>
     <div class="control">
-      <%= form.text_field :Amount_Paid, class:"input" %>
+      <%= form.text_field :amount_paid, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :From, class:"label" %>
+    <%= form.label :from, class:"label" %>
     <div class="control">
-      <%= form.text_field :From, class:"input" %>
+      <%= form.text_field :from, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :To, class:"label" %>
+    <%= form.label :to, class:"label" %>
     <div class="control">
-      <%= form.text_field :To, class:"input" %>
+      <%= form.text_field :to, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Receipt_Number, class:"label" %>
+    <%= form.label :receipt_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Receipt_Number, class:"input" %>
+      <%= form.text_field :receipt_number, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Paid_by, class:"label" %>
+    <%= form.label :paid_by, class:"label" %>
     <div class="control">
-      <%= form.text_field :Paid_by, class:"input" %>
+      <%= form.text_field :paid_by, class:"input" %>
     </div>
   </div>
 
