--- a/app/views/mkt_payments/show.html.erb
+++ b/app/views/mkt_payments/show.html.erb
@@ -2,52 +2,52 @@
 
 <p>
   <strong>Date:</strong>
-  <%= @mkt_payment.Date %>
+  <%= @mkt_payment.date %>
 </p>
 
 <p>
   <strong>Company name:</strong>
-  <%= @mkt_payment.Company_Name %>
+  <%= @mkt_payment.company_name %>
 </p>
 
 <p>
   <strong>Service rendered:</strong>
-  <%= @mkt_payment.Service_Rendered %>
+  <%= @mkt_payment.service_rendered %>
 </p>
 
 <p>
   <strong>Service:</strong>
-  <%= @mkt_payment.Service %>
+  <%= @mkt_payment.service %>
 </p>
 
 <p>
   <strong>Amount paid:</strong>
-  <%= @mkt_payment.Amount_Paid %>
+  <%= @mkt_payment.amount_paid %>
 </p>
 
 <p>
   <strong>From:</strong>
-  <%= @mkt_payment.From %>
+  <%= @mkt_payment.from %>
 </p>
 
 <p>
   <strong>To:</strong>
-  <%= @mkt_payment.To %>
+  <%= @mkt_payment.to %>
 </p>
 
 <p>
   <strong>Receipt number:</strong>
-  <%= @mkt_payment.Receipt_Number %>
+  <%= @mkt_payment.receipt_number %>
 </p>
 
 <p>
   <strong>Paid by:</strong>
-  <%= @mkt_payment.Paid_by %>
+  <%= @mkt_payment.paid_by %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @mkt_payment.Pro_number %>
+  <%= @mkt_payment.pro_number %>
 </p>
 
 <%= link_to 'Edit', edit_mkt_payment_path(@mkt_payment) %> |
