--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -52,8 +52,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :VAT, class:"label" %>
-    <%= form.text_field :VAT, class:"input" %>
+    <%= form.label :vat, class:"label" %>
+    <%= form.text_field :vat, class:"input" %>
   </div>
 
   <div class="field">
