--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -31,7 +31,7 @@
         <td><%= purchase.unit_price %></td>
         <td><%= purchase.total_items %></td>
         <td><%= purchase.total_amount %></td>
-        <td><%= purchase.VAT %></td>
+        <td><%= purchase.vat %></td>
         <td><%= purchase.pro_number %></td>
         <td><%= purchase.user_id %></td>
         <td><%= link_to 'Show', purchase %></td>
