--- a/app/views/rainfalls/show.html.erb
+++ b/app/views/rainfalls/show.html.erb
@@ -2,37 +2,37 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @rainfall.Company_Name %>
+  <%= @rainfall.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @rainfall.Date %>
+  <%= @rainfall.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @rainfall.Season %>
+  <%= @rainfall.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @rainfall.Farm_Name %>
+  <%= @rainfall.farm_name %>
 </p>
 
 <p>
   <strong>Section:</strong>
-  <%= @rainfall.Section %>
+  <%= @rainfall.section %>
 </p>
 
 <p>
   <strong>Mls received:</strong>
-  <%= @rainfall.Mls_received %>
+  <%= @rainfall.mls_received %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @rainfall.Pro_Number %>
+  <%= @rainfall.pro_number %>
 </p>
 
 <p>
