--- a/app/views/rationings/show.html.erb
+++ b/app/views/rationings/show.html.erb
@@ -2,37 +2,37 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @rationing.Company_Name %>
+  <%= @rationing.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @rationing.Date %>
+  <%= @rationing.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @rationing.Season %>
+  <%= @rationing.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @rationing.Farm_Name %>
+  <%= @rationing.farm_name %>
 </p>
 
 <p>
   <strong>Cereal name:</strong>
-  <%= @rationing.Cereal_Name %>
+  <%= @rationing.cereal_name %>
 </p>
 
 <p>
   <strong>Kgs issued:</strong>
-  <%= @rationing.KGS_Issued %>
+  <%= @rationing.kgs_issued %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @rationing.Pro_Number %>
+  <%= @rationing.pro_number %>
 </p>
 
 <p>
