--- a/app/views/set_seasons/show.html.erb
+++ b/app/views/set_seasons/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Date:</strong>
-  <%= @set_season.Date %>
+  <%= @set_season.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @set_season.Season %>
+  <%= @set_season.season %>
 </p>
 
 <p>
