--- a/app/views/weathers/_form.html.erb
+++ b/app/views/weathers/_form.html.erb
@@ -12,30 +12,30 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Area, class:"label" %>
+    <%= form.label :area, class:"label" %>
     <div class="control">
-      <%= form.text_field :Area, class:"input" %>
+      <%= form.text_field :area, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Min, class:"label" %>
+    <%= form.label :min, class:"label" %>
     <div class="control">
-      <%= form.text_field :Min, class:"input" %>
+      <%= form.text_field :min, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Max, class:"label" %>
+    <%= form.label :max, class:"label" %>
     <div class="control">
-      <%= form.text_field :Max, class:"input" %>
+      <%= form.text_field :max, class:"input" %>
     </div>
   </div>
 
