--- a/app/views/weathers/show.html.erb
+++ b/app/views/weathers/show.html.erb
@@ -2,22 +2,22 @@
 
 <p>
   <strong>Date:</strong>
-  <%= @weather.Date %>
+  <%= @weather.date %>
 </p>
 
 <p>
   <strong>Area:</strong>
-  <%= @weather.Area %>
+  <%= @weather.area %>
 </p>
 
 <p>
   <strong>Min:</strong>
-  <%= @weather.Min %>
+  <%= @weather.min %>
 </p>
 
 <p>
   <strong>Max:</strong>
-  <%= @weather.Max %>
+  <%= @weather.max %>
 </p>
 
 <p>
