--- a/app/views/calenders/_form.html.erb
+++ b/app/views/calenders/_form.html.erb
@@ -12,44 +12,44 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label"  %>
+    <%= form.label :season, class:"label"  %>
     <div class="control">
-      <%= form.text_field :Season, class:"input" %>
+      <%= form.text_field :season, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name, class:"label"  %>
+    <%= form.label :farm_name, class:"label"  %>
     <div class="control">
-      <%= form.text_field :Farm_Name, class:"input" %>
+      <%= form.text_field :farm_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Month, class:"label"  %>
+    <%= form.label :month, class:"label"  %>
     <div class="control">
-      <%= form.text_field :Month, class:"input" %>
+      <%= form.text_field :month, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Activity, class:"label"  %>
+    <%= form.label :activity, class:"label"  %>
     <div class="control">
-      <%= form.text_field :Activity, class:"input" %>
+      <%= form.text_field :activity, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label"  %>
+    <%= form.label :pro_number, class:"label"  %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
@@ -58,9 +58,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :Date, class:"label"  %>
+    <%= form.label :date, class:"label"  %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
