--- a/app/views/cashflows/_form.html.erb
+++ b/app/views/cashflows/_form.html.erb
@@ -12,58 +12,58 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
+    <%= form.label :season, class:"label" %>
     <div class="control">
-      <%= form.text_field :Season, class:"input" %>
+      <%= form.text_field :season, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Month, class:"label" %>
+    <%= form.label :month, class:"label" %>
     <div class="control">
-      <%= form.text_field :Month, class:"input" %>
+      <%= form.text_field :month, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Grower_Name, class:"label" %>
+    <%= form.label :grower_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Grower_Name, class:"input" %>
+      <%= form.text_field :grower_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Hectrage, class:"label" %>
+    <%= form.label :hectrage, class:"label" %>
     <div class="control">
-      <%= form.text_field :Hectrage, class:"input" %>
+      <%= form.text_field :hectrage, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Operation, class:"label" %>
+    <%= form.label :operation, class:"label" %>
     <div class="control">
-      <%= form.select :Operation, ['SeedBed', 'Land Chemicals', 'Land Fertilizers', 'Farm Operations', 'Curing', 'Grading And Selling', 'Others']%>
+      <%= form.select :operation, ['SeedBed', 'Land Chemicals', 'Land Fertilizers', 'Farm Operations', 'Curing', 'Grading And Selling', 'Others']%>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Unit_Price, class:"label" %>
+    <%= form.label :unit_price, class:"label" %>
     <div class="control">
-      <%= form.text_field :Unit_Price, class:"input" %>
+      <%= form.text_field :unit_price, class:"input" %>
     </div>
   </div>
 
@@ -75,23 +75,23 @@
   </div>
 
   <div class="field">
-    <%= form.label :Unity, class:"label" %>
+    <%= form.label :unity, class:"label" %>
     <div class="control">
-      <%= form.text_field :Unity, class:"input" %>
+      <%= form.text_field :unity, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Input_Name, class:"label" %>
+    <%= form.label :input_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Input_Name, class:"input" %>
+      <%= form.text_field :input_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Total_Amount, class:"label" %>
+    <%= form.label :total_amount, class:"label" %>
     <div class="control">
-      <%= form.text_field :Total_Amount, class:"input" %>
+      <%= form.text_field :total_amount, class:"input" %>
     </div>
   </div>
 
@@ -110,9 +110,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :pro_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
