--- a/app/views/cereal_sales/_form.html.erb
+++ b/app/views/cereal_sales/_form.html.erb
@@ -12,37 +12,37 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
-      <%= form.text_field :Season, class:"input" %>
+    <%= form.label :season, class:"label" %>
+      <%= form.text_field :season, class:"input" %>
     <div class="control">
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name, class:"label" %>
+    <%= form.label :farm_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Farm_Name, class:"input" %>
+      <%= form.text_field :farm_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Grower_Name, class:"label" %>
+    <%= form.label :grower_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Grower_Name, class:"input" %>
+      <%= form.text_field :grower_name, class:"input" %>
     </div>
   </div>
 
@@ -54,79 +54,79 @@
   </div>
 
   <div class="field">
-    <%= form.label :Truck_Number, class:"label" %>
+    <%= form.label :truck_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Truck_Number, class:"input" %>
+      <%= form.text_field :truck_number, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Trailer_Number, class:"label" %>
+    <%= form.label :trailer_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Trailer_Number, class:"input" %>
+      <%= form.text_field :trailer_number, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Test_Density, class:"label" %>
+    <%= form.label :test_density, class:"label" %>
     <div class="control">
-      <%= form.text_field :Test_Density, class:"input" %>
+      <%= form.text_field :test_density, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :External_Matter, class:"label" %>
+    <%= form.label :external_matter, class:"label" %>
     <div class="control">
-      <%= form.text_field :External_Matter, class:"input" %>
+      <%= form.text_field :external_matter, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Gross_Mass, class:"label" %>
+    <%= form.label :gross_mass, class:"label" %>
     <div class="control">
-      <%= form.text_field :Gross_Mass, class:"input" %>
+      <%= form.text_field :gross_mass, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Tare, class:"label" %>
+    <%= form.label :tare, class:"label" %>
     <div class="control">
-      <%= form.text_field :Tare, class:"input" %>
+      <%= form.text_field :tare, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Net_Mass, class:"label" %>
+    <%= form.label :net_mass, class:"label" %>
     <div class="control">
-      <%= form.text_field :Net_Mass, class:"input" %>
+      <%= form.text_field :net_mass, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Price_Per_Tonne, class:"label" %>
+    <%= form.label :price_per_tonne, class:"label" %>
     <div class="control">
-      <%= form.text_field :Price_Per_Tonne, class:"input" %>
+      <%= form.text_field :price_per_tonne, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Quantity, class:"label" %>
+    <%= form.label :quantity, class:"label" %>
     <div class="control">
-      <%= form.text_field :Quantity, class:"input" %>
+      <%= form.text_field :quantity, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Amount_Paid , class:"label"%>
+    <%= form.label :amount_paid , class:"label"%>
     <div class="control">
-      <%= form.text_field :Amount_Paid, class:"input" %>
+      <%= form.text_field :amount_paid, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :pro_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
