--- a/app/views/curings/_form.html.erb
+++ b/app/views/curings/_form.html.erb
@@ -12,65 +12,65 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
+    <%= form.label :season, class:"label" %>
     <div class="control">
-      <%= form.text_field :Season, class:"input" %>
+      <%= form.text_field :season, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name, class:"label" %>
+    <%= form.label :farm_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Farm_Name, class:"input" %>
+      <%= form.text_field :farm_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Facility, class:"label" %>
+    <%= form.label :facility, class:"label" %>
     <div class="control">
-      <%= form.text_field :Facility, class:"input" %>
+      <%= form.text_field :facility, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Time, class:"label" %>
+    <%= form.label :time, class:"label" %>
     <div class="control">
-      <%= form.datetime_select :Time, class:"input" %>
+      <%= form.datetime_select :time, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Day, class:"label" %>
+    <%= form.label :day, class:"label" %>
     <div class="control">
-      <%= form.date_select :Day, class:"input" %>
+      <%= form.date_select :day, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Temperature, class:"label" %>
+    <%= form.label :temperature, class:"label" %>
     <div class="control">
-      <%= form.text_field :Temperature, class:"input" %>
+      <%= form.text_field :temperature, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :pro_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
