--- a/app/views/deliveries/_form.html.erb
+++ b/app/views/deliveries/_form.html.erb
@@ -12,65 +12,65 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
+    <%= form.label :season, class:"label" %>
     <div class="control">
-      <%= form.text_field :Season, class:"input" %>
+      <%= form.text_field :season, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name, class:"label" %>
+    <%= form.label :farm_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Farm_Name, class:"input" %>
+      <%= form.text_field :farm_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Section, class:"label" %>
+    <%= form.label :section, class:"label" %>
     <div class="control">
-      <%= form.text_field :Section, class:"input" %>
+      <%= form.text_field :section, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Type, class:"label" %>
+    <%= form.label :type, class:"label" %>
     <div class="control">
-      <%= form.text_field :Type, class:"input" %>
+      <%= form.text_field :type, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Delivered_by, class:"label" %>
+    <%= form.label :delivered_by, class:"label" %>
     <div class="control">
-      <%= form.text_field :Delivered_by, class:"input" %>
+      <%= form.text_field :delivered_by, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Goods, class:"label" %>
+    <%= form.label :goods, class:"label" %>
     <div class="control">
-      <%= form.text_field :Goods, class:"input" %>
+      <%= form.text_field :goods, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Quantity, class:"label" %>
+    <%= form.label :quantity, class:"label" %>
     <div class="control">
-      <%= form.text_field :Quantity, class:"input" %>
+      <%= form.text_field :quantity, class:"input" %>
     </div>
   </div>
 
@@ -82,9 +82,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :pro_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
