--- a/app/views/equipment_services/_form.html.erb
+++ b/app/views/equipment_services/_form.html.erb
@@ -12,58 +12,58 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
+    <%= form.label :season, class:"label" %>
     <div class="control">
-      <%= form.text_field :Season, class:"input" %>
+      <%= form.text_field :season, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Type, class:"label" %>
+    <%= form.label :type, class:"label" %>
     <div class="control">
-      <%= form.text_field :Type, class:"input" %>
+      <%= form.text_field :type, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Equipment_Number, class:"label" %>
+    <%= form.label :equipment_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Equipment_Number, class:"input" %>
+      <%= form.text_field :equipment_number, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Service_Type, class:"label" %>
+    <%= form.label :service_type, class:"label" %>
     <div class="control">
-      <%= form.text_field :Service_Type, class:"input" %>
+      <%= form.text_field :service_type, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Done_By, class:"label" %>
+    <%= form.label :done_by, class:"label" %>
     <div class="control">
-      <%= form.text_field :Done_By, class:"input" %>
+      <%= form.text_field :done_by, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Mileage, class:"label" %>
+    <%= form.label :mileage, class:"label" %>
     <div class="control">
-      <%= form.text_field :Mileage, class:"input" %>
+      <%= form.text_field :mileage, class:"input" %>
     </div>
   </div>
 
@@ -75,23 +75,23 @@
   </div>
 
   <div class="field">
-    <%= form.label :Job, class:"label" %>
+    <%= form.label :job, class:"label" %>
     <div class="control">
-      <%= form.text_field :Job, class:"input" %>
+      <%= form.text_field :job, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Total_Amount, class:"label" %>
+    <%= form.label :total_amount, class:"label" %>
     <div class="control">
-      <%= form.text_field :Total_Amount, class:"input" %>
+      <%= form.text_field :total_amount, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :pro_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
