--- a/app/views/equipment_services/show.html.erb
+++ b/app/views/equipment_services/show.html.erb
@@ -2,42 +2,42 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @equipment_service.Company_Name %>
+  <%= @equipment_service.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @equipment_service.Date %>
+  <%= @equipment_service.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @equipment_service.Season %>
+  <%= @equipment_service.season %>
 </p>
 
 <p>
   <strong>Type:</strong>
-  <%= @equipment_service.Type %>
+  <%= @equipment_service.type %>
 </p>
 
 <p>
   <strong>Equipment number:</strong>
-  <%= @equipment_service.Equipment_Number %>
+  <%= @equipment_service.equipment_number %>
 </p>
 
 <p>
   <strong>Service type:</strong>
-  <%= @equipment_service.Service_Type %>
+  <%= @equipment_service.service_type %>
 </p>
 
 <p>
   <strong>Done by:</strong>
-  <%= @equipment_service.Done_By %>
+  <%= @equipment_service.done_by %>
 </p>
 
 <p>
   <strong>Mileage:</strong>
-  <%= @equipment_service.Mileage %>
+  <%= @equipment_service.mileage %>
 </p>
 
 <p>
@@ -47,17 +47,17 @@
 
 <p>
   <strong>Job:</strong>
-  <%= @equipment_service.Job %>
+  <%= @equipment_service.job %>
 </p>
 
 <p>
   <strong>Total amount:</strong>
-  <%= @equipment_service.Total_Amount %>
+  <%= @equipment_service.total_amount %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @equipment_service.Pro_Number %>
+  <%= @equipment_service.pro_number %>
 </p>
 
 <p>
