--- a/app/views/field_days/_form.html.erb
+++ b/app/views/field_days/_form.html.erb
@@ -12,18 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
-    <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+    <%= form.label :company_name, class:"label" %>
+    <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
   </div>
 
   <div class="field">
-    <%= form.label :Date %>
-    <%= form.date_select :Date %>
+    <%= form.label :date %>
+    <%= form.date_select :date %>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
-    <%= form.text_field :Season, class:"input" %>
+    <%= form.label :season, class:"label" %>
+    <%= form.text_field :season, class:"input" %>
   </div>
 
   <div class="field">
@@ -32,8 +32,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :Start_Time, class:"label" %>
-    <%= form.time_select :Start_Time, class:"input" %>
+    <%= form.label :start_time, class:"label" %>
+    <%= form.time_select :start_time, class:"input" %>
   </div>
 
   <div class="field">
