--- a/app/views/harvestings/_form.html.erb
+++ b/app/views/harvestings/_form.html.erb
@@ -12,43 +12,43 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Compnay_Name, class:"label" %>
-    <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+    <%= form.label :company_name, class:"label" %>
+    <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
   </div>
 
   <div class="field">
-    <%= form.label :Date %>
-    <%= form.date_select :Date %>
+    <%= form.label :date %>
+    <%= form.date_select :date %>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
-    <%= form.text_field :Season, class:"input" %>
+    <%= form.label :season, class:"label" %>
+    <%= form.text_field :season, class:"input" %>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name, class:"label" %>
-    <%= form.text_field :Farm_Name, class:"input" %>
+    <%= form.label :farm_name, class:"label" %>
+    <%= form.text_field :farm_name, class:"input" %>
   </div>
 
   <div class="field">
-    <%= form.label :Section, class:"label" %>
-    <%= form.text_field :Section, class:"input" %>
+    <%= form.label :section, class:"label" %>
+    <%= form.text_field :section, class:"input" %>
   </div>
 
   <div class="field">
-    <%= form.label :Crop, class:"label" %>
-    <%= form.text_field :Crop, class:"input" %>
+    <%= form.label :crop, class:"label" %>
+    <%= form.text_field :crop, class:"input" %>
   </div>
 
   <div class="field">
-    <%= form.label :KGS_Done, class:"label" %>
-    <%= form.text_field :KGS_Done, class:"input" %>
+    <%= form.label :kgs_done, class:"label" %>
+    <%= form.text_field :kgs_done, class:"input" %>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
-    <%= form.text_field :Pro_Number, class:"input" %>
+    <%= form.label :pro_number, class:"label" %>
+    <%= form.text_field :pro_number, class:"input" %>
   </div>
 
   <div class="field">
