--- a/app/views/input_calibrations/_form.html.erb
+++ b/app/views/input_calibrations/_form.html.erb
@@ -12,51 +12,51 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
+    <%= form.label :season, class:"label" %>
     <div class="control">
-      <%= form.text_field :Season, class:"input" %>
+      <%= form.text_field :season, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_Name, class:"label" %>
+    <%= form.label :farm_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Farm_Name, class:"input" %>
+      <%= form.text_field :farm_name, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Section, class:"label" %>
+    <%= form.label :section, class:"label" %>
     <div class="control">
-      <%= form.text_field :Section, class:"input" %>
+      <%= form.text_field :section, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Crop, class:"label" %>
+    <%= form.label :crop, class:"label" %>
     <div class="control">
-      <%= form.text_field :Crop, class:"input" %>
+      <%= form.text_field :crop, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Variety, class:"label" %>
+    <%= form.label :variety, class:"label" %>
     <div class="control">
-      <%= form.text_field :Variety, class:"input" %>
+      <%= form.text_field :variety, class:"input" %>
     </div>
   </div>
 
@@ -75,30 +75,30 @@
   </div>
 
   <div class="field">
-    <%= form.label :Bags_Used, class:"label" %>
+    <%= form.label :bags_used, class:"label" %>
     <div class="control">
-      <%= form.text_field :Bags_Used, class:"input" %>
+      <%= form.text_field :bags_used, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Herbicide, class:"label" %>
+    <%= form.label :herbicide, class:"label" %>
     <div class="control">
-      <%= form.text_field :Herbicide, class:"input" %>
+      <%= form.text_field :herbicide, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Herbicide_Rate, class:"label" %>
+    <%= form.label :herbicide_rate, class:"label" %>
     <div class="control">
-      <%= form.text_field :Herbicide_Rate, class:"input" %>
+      <%= form.text_field :herbicide_rate, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :pro_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
