--- a/app/views/land_names/_form.html.erb
+++ b/app/views/land_names/_form.html.erb
@@ -12,30 +12,30 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :Company_name, class:"label" %>
+    <%= form.label :company_name, class:"label" %>
     <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      <%= form.select :company_Name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Date, class:"label" %>
+    <%= form.label :date, class:"label" %>
     <div class="control">
-      <%= form.date_select :Date, class:"input" %>
+      <%= form.date_select :date, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Season, class:"label" %>
+    <%= form.label :season, class:"label" %>
     <div class="control">
-      <%= form.text_field :Season, class:"input" %>
+      <%= form.text_field :season, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Farm_nameSection, class:"label" %>
+    <%= form.label :farm_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Farm_nameSection, class:"input" %>
+      <%= form.text_field :farm_name, class:"input" %>
     </div>
   </div>
 
@@ -47,23 +47,23 @@
   </div>
 
   <div class="field">
-    <%= form.label :Hectrage, class:"label" %>
+    <%= form.label :hectrage, class:"label" %>
     <div class="control">
-      <%= form.text_field :Hectrage, class:"input" %>
+      <%= form.text_field :hectrage, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Crop, class:"label" %>
+    <%= form.label :crop, class:"label" %>
     <div class="control">
-      <%= form.text_field :Crop, class:"input" %>
+      <%= form.text_field :crop, class:"input" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
+    <%= form.label :pro_number, class:"label" %>
     <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
+      <%= form.text_field :pro_number, class:"input" %>
     </div>
   </div>
 
