--- a/app/views/rationings/index.html.erb
+++ b/app/views/rationings/index.html.erb
@@ -12,7 +12,8 @@
       <th>Cereal name</th>
       <th>Kgs issued</th>
       <th>Pro number</th>
-      <th>User</th>
+      <th>Issued To</th>
+      <th>Price</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,14 +21,15 @@
   <tbody>
     <% @rationings.each do |rationing| %>
       <tr>
-        <td><%= rationing.Company_Name %></td>
-        <td><%= rationing.Date %></td>
-        <td><%= rationing.Season %></td>
-        <td><%= rationing.Farm_Name %></td>
-        <td><%= rationing.Cereal_Name %></td>
-        <td><%= rationing.KGS_Issued %></td>
-        <td><%= rationing.Pro_Number %></td>
-        <td><%= rationing.user_id %></td>
+        <td><%= rationing.company_name %></td>
+        <td><%= rationing.date %></td>
+        <td><%= rationing.season %></td>
+        <td><%= rationing.farm_name %></td>
+        <td><%= rationing.cereal_name %></td>
+        <td><%= rationing.kgs_issued %></td>
+        <td><%= rationing.pro_number %></td>
+        <td><%= rationing.issued_to %></td>
+        <td><%= rationing.price %></td>
         <td><%= link_to 'Show', rationing %></td>
         <td><%= link_to 'Edit', edit_rationing_path(rationing) %></td>
         <td><%= link_to 'Destroy', rationing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
