--- a/app/views/seedbeds/show.html.erb
+++ b/app/views/seedbeds/show.html.erb
@@ -2,57 +2,57 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @seedbed.Company_Name %>
+  <%= @seedbed.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @seedbed.Date %>
+  <%= @seedbed.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @seedbed.Season %>
+  <%= @seedbed.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @seedbed.Farm_Name %>
+  <%= @seedbed.farm_name %>
 </p>
 
 <p>
   <strong>Section:</strong>
-  <%= @seedbed.Section %>
+  <%= @seedbed.section %>
 </p>
 
 <p>
   <strong>Item used:</strong>
-  <%= @seedbed.Item_Used %>
+  <%= @seedbed.item_used %>
 </p>
 
 <p>
   <strong>Quantity:</strong>
-  <%= @seedbed.Quantity %>
+  <%= @seedbed.quantity %>
 </p>
 
 <p>
   <strong>Unit:</strong>
-  <%= @seedbed.Unit %>
+  <%= @seedbed.unit %>
 </p>
 
 <p>
   <strong>Input amount:</strong>
-  <%= @seedbed.Input_Amount %>
+  <%= @seedbed.input_amount %>
 </p>
 
 <p>
   <strong>Labour amount:</strong>
-  <%= @seedbed.Labour_Amount %>
+  <%= @seedbed.labour_amount %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @seedbed.Pro_Number %>
+  <%= @seedbed.pro_number %>
 </p>
 
 <p>
